@@ -1,3 +1,10 @@
+2005-01-08  Thomas Wood  <thos@gnome.org>
+
+	* gnome-wp-xml.c (gnome_wp_xml_load_xml): Load translated XML
+	description elements if available
+
+	Fixes #160700
+
 2005-01-08  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-capplet.c (wallpaper_properties_init): Fix the leaks
